--- a/css/style.css
+++ b/css/style.css
@@ -103,3 +103,8 @@ div.item{
     -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
     filter: grayscale(100%);
 }
+
+.img {
+    max-width: 100%;
+    height:auto;
+}
