--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 html,
 body{
-    font-family: 'Roboto';
+  
+    font: 13px "Source Sans Pro", Arial, Helvetica, sans-serif;
     font-weight: 300;
     height: 100%;
     width: 100%;
@@ -11,6 +12,7 @@ body{
     background-position: center;
     background-size: cover;
 }
+
 
 .background {
     position: absolute;
@@ -102,3 +104,37 @@ div.item{
     max-width: 100%;
     height:auto;
 }
+
+/* for anime.js  */
+.ml11 {
+    font-weight: 700;
+    font-size: 3.5em;
+  }
+  
+  .ml11 .text-wrapper {
+    position: relative;
+    display: inline-block;
+    padding-top: 0.1em;
+    padding-right: 0.05em;
+    padding-bottom: 0.15em;
+  }
+  
+  .ml11 .line {
+    opacity: 0;
+    position: absolute;
+    left: 0;
+    height: 100%;
+    width: 3px;
+    background-color: #fff;
+    transform-origin: 0 50%;
+  }
+  
+  .ml11 .line1 { 
+    top: 0; 
+    left: 0;
+  }
+  
+  .ml11 .letter {
+    display: inline-block;
+    line-height: 1em;
+  }
