--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ body{
 }
 
 
+
 .background {
     position: absolute;
     display: block;
@@ -68,6 +69,7 @@ div.item{
 
 .header-photo{
     background: url(https://source.unsplash.com/vHnVew5foFU/1920x1080);
+    height: 100vh;
     background-repeat: no-repeat;
     position: relative; 
     background-size: cover; 
@@ -138,3 +140,4 @@ div.item{
     display: inline-block;
     line-height: 1em;
   }
+
