--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,11 @@
 html,
 body{
   
-    font: 13px "Source Sans Pro", Arial, Helvetica, sans-serif;
+    font-family: sans-serif;
     font-weight: 300;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.15;
     height: 100%;
     width: 100%;
     max-width: 100vw;
@@ -11,7 +14,130 @@ body{
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+    background-color: #fafafa;
+    -webkit-text-size-adjust: 100%;
+    -ms-text-size-adjust: 100%;
+    -ms-overflow-style: scrollbar;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
+
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+.h1,
+.h2,
+.h3,
+.h4 {
+  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+  font-weight: 300;
+  line-height: 1.5em;
+}
+
+h1,
+h2,
+h3,
+.h1,
+.h2,
+.h3 {
+  margin-top: 20px;
+  margin-bottom: 10px;
+}
+
+h4,
+h5,
+h6,
+.h4,
+.h5,
+.h6 {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+p {
+  
+    margin-top: 0;
+    margin-bottom: 1rem;
+}
+
+html * {
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+h1,
+.h1 {
+  font-size: 3.3125rem;
+  line-height: 1.15em;
+}
+
+h2,
+.h2 {
+  font-size: 2.25rem;
+  line-height: 1.5em;
+}
+
+h3,
+.h3 {
+  font-size: 1.5625rem;
+  line-height: 1.4em;
+}
+
+h4,
+.h4 {
+  font-size: 1.125rem;
+  line-height: 1.5em;
+}
+
+h5,
+.h5 {
+  font-size: 1.0625rem;
+  line-height: 1.55em;
+  margin-bottom: 15px;
+}
+
+h6,
+.h6 {
+  font-size: 0.75rem;
+  text-transform: uppercase;
+  font-weight: 500;
+}
+b {
+  font-weight: 700;
+}
+
+p {
+  font-size: 14px;
+  margin: 0 0 10px;
+}
+
+
+.title{
+  font-weight: 700;
+  font-family: "Roboto Slab", "Times New Roman", serif;
+}
+
+.title,
+.title a,
+.card-title,
+.card-title a,
+.info-title,
+.info-title a,
+.footer-brand,
+.footer-brand a,
+.footer-big h5,
+.footer-big h5 a,
+.footer-big h4,
+.footer-big h4 a,
+.media .media-heading,
+.media .media-heading a {
+  color: #3C4858;
+  text-decoration: none;
+}
+
+
 
 
 
@@ -76,10 +202,38 @@ div.item{
 }
 
 .page-caption { padding-top: 170px; padding-bottom: 174px; }
-.page-title { font-size: 46px; line-height: 1; color: #fff; font-weight: 600; text-align: center; }
+.page-title { 
+    line-height: 1; 
+    color: #fff; 
+    font-weight: 700; 
+    text-align: center;
+    font-family: "Roboto Slab", "Times New Roman", sans-serif;
+    margin-top: 30px;
+    margin-bottom: 25px;
+    min-height: 32px;
+      
+}
 
+.main-raised {
+    margin: -60px 30px 0px;
+    border-radius: 6px;
+    box-shadow: 0 16px 24px 2px rgba(0, 0, 0, 0.14), 0 6px 30px 5px rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(0, 0, 0, 0.2);
+  }
+.card { 
+        font-size: .875rem;
+        border: 0;
+        margin-bottom: 30px;
+        margin-top: 30px;
+        border-radius: 6px;
+        color: rgba(0, 0, 0, 0.87);
+        width: 100%;
+}
 .card-section { position: relative; bottom: 60px; }
 .card-block { padding: 80px; }
+
+
+
+
 .section-title { margin-bottom: 60px; }
 
 .image {
