--- a/css/style.css
+++ b/css/style.css
@@ -98,6 +98,9 @@ p {
   margin: 0 0 10px;
 }
 
+#backgroundImg {
+  filter: brightness(50%);
+}
 
 .title{
   font-weight: 700;
@@ -179,12 +182,17 @@ div.item{
 }
 
 .header-photo{
-    background: url(https://source.unsplash.com/sp-p7uuT0tw/1920x1080);
+    background: url(images/background.jpeg);
     height: 100vh;
     background-repeat: no-repeat;
     position: relative; 
-    background-size: cover; 
+    /* parallax */
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
+
 
 .page-caption { padding-top: 170px; padding-bottom: 174px; }
 .page-title { 
