--- a/css/style.css
+++ b/css/style.css
@@ -85,7 +85,7 @@ h5,
 
 h6,
 .h6 {
-  font-size: 0.75rem;
+  font-size: 0.50rem;
   text-transform: uppercase;
   font-weight: 500;
 }
@@ -102,9 +102,17 @@ p {
   filter: brightness(50%);
 }
 
+
 .title{
   font-weight: 700;
   font-family: "Roboto Slab", "Times New Roman", serif;
+}
+
+.position{
+  font-style: italic;
+}
+.software{
+  font-style: italic;
 }
 
 .title,
