--- a/css/style.css
+++ b/css/style.css
@@ -268,9 +268,7 @@ div.item{
   .card-body{
     width: 100%;
   }
-  .container{
-    width: 100%;
-  }
+  .container { width: 100%; padding: 0px } 
 }
 
 
