--- a/css/style.css
+++ b/css/style.css
@@ -47,12 +47,6 @@ p.ex1 {
   margin-bottom: 25px;
 }
 
-/*
-p {
-  font-size: 20rem;
-}
-*/
-
 .optionButton {
   width: 100%;
 }
@@ -385,3 +379,25 @@ div.item{
     object-fit: cover;
     
   }
+
+
+.iframe-container {
+  overflow: hidden;
+  padding-top: 56.25%;
+  position: relative;
+}
+ 
+.iframe-container iframe {
+   border: 0;
+   height: 100%;
+   left: 0;
+   position: absolute;
+   top: 0;
+   width: 100%;
+}
+ 
+/* 4x3 Aspect Ratio */
+.iframe-container-4x3 {
+  padding-top: 75%;
+}
+
