--- a/css/style.css
+++ b/css/style.css
@@ -392,6 +392,26 @@ iframe[seamless] {
   }
 
 
+  .content {
+    width: 50%;
+    margin: 0px auto;
+ }
+ 
+ .embed-container {
+    height: 0;
+    width: 100%;
+    padding-bottom: 56.25%; /* play with this until right */
+    overflow: hidden;
+    position: relative;
+ }
+ 
+ .embed-container iframe {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+ }
   /*
 .iframe-container {
   overflow: hidden;
