--- a/css/style.css
+++ b/css/style.css
@@ -54,6 +54,14 @@ p.ex1 {
 .styledTitle {
   height: 20px;
 }
+.embed-responsivest {
+  position: relative;
+  display: block;
+  height: 0;
+  padding: 0;
+  overflow: hidden;
+}
+
 .embed-responsive-210by297 {
   padding-bottom: 141.42%;
   }
