--- a/css/about.css
+++ b/css/about.css
@@ -88,6 +88,10 @@ body {
   --paperColorDark: hsla(242, 86%, 34%, 1);
   --shadowColorFaint: hsla(0, 0%, 0%, 0.2);
 }
+section {
+  height: 100vh;
+  color:white;
+}
 
 ::selected{
   color: var(--textColorDark);
@@ -144,9 +148,7 @@ text-transform: uppercase;
 html, body{
   margin: 0;
   padding: 0;
-  overflow-x: hidden;
-  overflow-y: scroll;
-  
+  /* overflow-y: scroll; */
   height: 100vh; 
   width: 100vw;
   
@@ -155,6 +157,10 @@ html, body{
   color: var(--textColor);
   font-family: 'Saira', sans-serif;
   position: relative;
+
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+
 }
 
 *{
@@ -174,3 +180,43 @@ audio.active{
 }
 */
 
+
+
+/* Page Loader - thanks to crnacura */
+.js .loading::before {
+	content: '';
+	position: fixed;
+	z-index: 100000;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: var(--color-bg);
+}
+
+.js .loading::after {
+	content: '';
+	position: fixed;
+	z-index: 100000;
+	top: 50%;
+	left: 50%;
+	width: 60px;
+	height: 60px;
+	margin: -30px 0 0 -30px;
+	pointer-events: none;
+	border-radius: 50%;
+	opacity: 0.4;
+	background: var(--color-link);
+	animation: loaderAnim 0.7s linear infinite alternate forwards;
+}
+
+@keyframes loaderAnim {
+	to {
+		opacity: 1;
+		transform: scale3d(0.5,0.5,1);
+	}
+}
+
+canvas {
+	display: block;
+}
