--- a/css/about.css
+++ b/css/about.css
@@ -35,6 +35,9 @@ body {
   right: 0;
   bottom: 0;
 }
+#viewport.fade-out {
+  opacity: 0;
+}
 .page-wrapper {
   padding: 0px;
   margin: 12px 48px;
@@ -217,6 +220,156 @@ audio.active{
 	}
 }
 
+
+
 canvas {
 	display: block;
 }
+
+#loader {
+  display: block;
+  position: relative;
+  left: 50%;
+  top: 50%;
+  width: 150px;
+  height: 150px;
+  margin: -75px 0 0 -75px;
+  border-radius: 50%;
+  border: 3px solid transparent;
+  border-top-color: #9370DB;
+  -webkit-animation: spin 2s linear infinite;
+  animation: spin 2s linear infinite;
+}
+#loader:before {
+  content: "";
+  position: absolute;
+  top: 5px;
+  left: 5px;
+  right: 5px;
+  bottom: 5px;
+  border-radius: 50%;
+  border: 3px solid transparent;
+  border-top-color: #BA55D3;
+  -webkit-animation: spin 3s linear infinite;
+  animation: spin 3s linear infinite;
+}
+#loader:after {
+  content: "";
+  position: absolute;
+  top: 15px;
+  left: 15px;
+  right: 15px;
+  bottom: 15px;
+  border-radius: 50%;
+  border: 3px solid transparent;
+  border-top-color: #FF00FF;
+  -webkit-animation: spin 1.5s linear infinite;
+  animation: spin 1.5s linear infinite;
+}
+@-webkit-keyframes spin {
+  0%   {
+      -webkit-transform: rotate(0deg);
+      -ms-transform: rotate(0deg);
+      transform: rotate(0deg);
+  }
+  100% {
+      -webkit-transform: rotate(360deg);
+      -ms-transform: rotate(360deg);
+      transform: rotate(360deg);
+  }
+}
+@keyframes spin {
+  0%   {
+      -webkit-transform: rotate(0deg);
+      -ms-transform: rotate(0deg);
+      transform: rotate(0deg);
+  }
+  100% {
+      -webkit-transform: rotate(360deg);
+      -ms-transform: rotate(360deg);
+      transform: rotate(360deg);
+  }
+}
+
+
+/* Loader thanks to Jon Kantner
+*/
+$ringRadius: 7rem
+$ringSectors: 30
+$animDuration: 8s
+
+*
+	border: 0
+	box-sizing: border-box
+	margin: 0
+	padding: 0
+
+\:root
+	font-size: calc(16px + (24 - 16)*(100vw - 320px)/ (1280 - 320))
+
+body, .preloader
+	display: flex
+
+body
+	background: #000
+	color: #3df1f1
+	font: 1em Dosis, sans-serif
+	height: 100vh
+	line-height: 1.5
+	perspective: 40em
+
+.preloader
+	animation: tiltSpin $animDuration linear infinite
+	flex-direction: column
+	justify-content: center
+	align-items: center
+	margin: auto
+	width: 17em
+	height: 17em
+	&, &__ring
+		transform-style: preserve-3d
+	&__ring
+		animation:
+			name: spin
+			duration: $animDuration/2
+			timing-function: inherit
+			iteration-count: inherit
+		font-size: 2em
+		position: relative
+		height: 3rem
+		width: 1.5rem
+		&:nth-child(even)
+			animation-direction: reverse
+	&__sector
+		font-weight: 600
+		position: absolute
+		top: 0
+		left: 0
+		text-align: center
+		text-transform: uppercase
+		transform: translateZ($ringRadius)
+		&, &:empty:before
+			display: inline-block
+			width: 100%
+			height: 100%
+		&:empty:before
+			background: linear-gradient(transparent 45%,currentColor 45% 55%,transparent 55%)
+			content: ""
+		@for $s from 2 through $ringSectors
+			&:nth-child(#{$s})
+				$angle: (360deg / $ringSectors) * ($s - 1)
+				transform: rotateY($angle) translateZ($ringRadius)
+
+/* Animations */
+@keyframes tiltSpin
+	from
+		transform: rotateY(0) rotateX(30deg)
+	to
+		transform: rotateY(1turn) rotateX(30deg)
+
+@keyframes spin
+	from
+		transform: rotateY(0)
+	to
+    transform: rotateY(1turn)
+    
