--- a/css/style.css
+++ b/css/style.css
@@ -295,7 +295,7 @@ div.item{
 }
 
 
-.aboutpadding { padding-top: 170px; }
+.aboutpadding { padding-top: 10.525rem; }
 .page-caption { padding-top: 170px; padding-bottom: 174px; }
 .page-title { 
     line-height: 1; 
