--- a/css/style.css
+++ b/css/style.css
@@ -73,9 +73,18 @@ p.ex1 {
 }
 
 p {
-  
     margin-top: 0;
     margin-bottom: 1rem;
+}
+
+.normalp {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.normalbullet {
+  font-size: 14px;
+  margin: 0 0 0px;
 }
 
 html * {
